# docassemble-VTCertificateOfServiceGeneral

./: MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/VTCertificateOfServiceGeneral/: __init__.py
docassemble/VTCertificateOfServiceGeneral/data/questions/: general_certificate_of_service_main.yml
docassemble/VTCertificateOfServiceGeneral/data/templates/: certificate_of_service_addendum.docx
