[build-system]
requires = [
    "setuptools>=80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.VTCertificateOfServiceGeneral"
version = "0.0.1"
description = "General Certificate of Service form 600-00264."
readme = "README.md"
authors = [
    { name = "Legal Services Vermont and Lemma Legal", email = "kelizamcguire@gmail.com" },
]
dependencies = []

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
